--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="static/public.css"> 
-    <title>film-search-web</title>
+    <link rel="stylesheet" type="text/css" href="static/public.css">
+    <link rel="icon" href="../../static/img/teddy.svg">
+    <title>拿了么</title>
   </head>
   <body>
     <div id="app"></div>
