--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="static/public.css">
     <link rel="icon" href="../../static/img/teddy.svg">
     <title>拿了么</title>
+    <link rel="stylesheet" href="static/test1.css">
   </head>
   <body>
     <div id="app"></div>
