--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=0, maximum-scale=0, user-scalable=yes,shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/public.css">
-    <link rel="icon" href="../../static/img/teddy.svg">
+    <link rel="icon" href="../../static/img/beer.svg">
     <title>拿了么</title>
     <link rel="stylesheet" href="static/test1.css">
   </head>
