--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/public.css">
     <link rel="icon" href="../../static/img/beer.svg">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+
     <title>拿了么</title>
     <link rel="stylesheet" href="static/test1.css">
   </head>
