解决nes.css与npm不兼容的情况

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=0, maximum-scale=0, user-scalable=yes,shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/public.css">
+    <link rel="stylesheet" type="text/css" href="static/nes.css">
     <link rel="icon" href="../../static/img/beer.svg">
     <!--<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">-->
 
