--- a/nes/jsnes/index.htm
+++ b/nes/jsnes/index.htm
@@ -33,7 +33,7 @@
  * 转载或使用时，还请保留以上信息，谢谢！
  */ -->
 <body>
-<div align="center">
+<div>
   <br/>
     <table border="2" cellpadding="5px">
       <tr>
