第一批需求完成!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../../static/img/beer.svg">
     <!--<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">-->
 
-    <title>拿了么</title>
+    <title>生活区通行码平台</title>
     <!--<link rel="stylesheet" href="static/test1.css">-->
   </head>
   <body>
